--- a/productos.html
+++ b/productos.html
@@ -58,16 +58,16 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="imagenes/th (25).jpg" alt="ComputerNice">
+                        <img src="img/images (9).jfif" alt="SURTIFRU">
                     </a>
                 </figure>
             </div>
             <div class="boxSobre">
                 <h2 class='sobrenosotrosPtitle'>SOBRE NOSOTROS</h2>
                 <div class="sobreNosotros">
-                    <p class="sobrenosotrosP">Somos estudiates del Front-end 9 de</p>
+                    <p class="sobrenosotrosP">Somos Surtifru</p>
                 </div>
-                <p class="academiaG">ACADEMIA GEEK</p>
+                <p class="academiaG">SURTIFRU</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
